<resources>
    <string name="app_name">Rimer</string>
    <string name="create_your_account">Create your account:</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forget_the_password">Forget the password!</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_gmail_com">email@gmail.com</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="auth_google">Sign in via Google</string>
    <string name="menu_button_description" />
    <string name="create_user_account">Create user account:</string>
    <string name="create_account">Create Account</string>
    <string name="user_register">User Register</string>
    <string name="signin">Signin</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_a_driver_account">Register a driver account</string>
    <string name="register_a_user_account">Register a user account</string>
    <string name="driver_picture" />
    <string name="waiting_for_driver_s_confirmation">Waiting for Driver\'s Confirmation...</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="you_have_a_new_request">You have a new request!!</string>
    <string name="accept_ride">Accept ride</string>
    <string name="pick_up_from">Pick up from</string>
    <string name="customer_name">Customer\'s Name: </string>
    <string name="driver_s_name">Driver\'s Name: </string>
    <string name="pickup_at">Pickup at:</string>
    <string name="destination">Destination: </string>
    <string name="finished_ride" >Finished ride</string>
</resources>