<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.DriverViews.TripConfirmationActivity.TripConfirmationActivity">

    <!-- ImageView for Displaying an Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Waiting for Confirmation Message -->
    <TextView
        android:id="@+id/tvWaitingForConfirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_a_new_request"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Buttons Container -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvWaitingForConfirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Accept Ride Button -->
        <Button
            android:id="@+id/btnAcceptRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_ride"
            android:layout_marginEnd="8dp" />

        <!-- Cancel Ride Button -->
        <Button
            android:id="@+id/btnCancelRide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_ride" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

</androidx.constraintlayout.widget.ConstraintLayout>
