<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.UserViews.TripDetailActivity.TripDetailActivity">

    <!-- Map Fragment for displaying the map -->
    <fragment
        android:id="@+id/mapView"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/detailsLayout"
        app:layout_constraintVertical_weight="2" />

    <!-- Layout for Taxi Driver and Trip Details -->
    <LinearLayout
        android:id="@+id/detailsLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/mapView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_weight="1">

        <!-- Vertical LinearLayout for Text Details -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pickup_at"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:paddingRight="16dp"/>
                <TextView
                    android:id="@+id/tripPickupPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pick_up_from"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/destination"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:paddingRight="16dp"/>
                <TextView
                    android:id="@+id/tripDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Destination"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/driver_s_name"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:paddingRight="16dp"/>
                <TextView
                    android:id="@+id/driverName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/driver_s_name"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="?attr/textAppearanceListItem" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
