<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Views.AuthenticationViews.DriverSignupView.DriverSignupActivity">

<ImageView
    android:id="@+id/backgroundView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scaleType="centerCrop"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/wallpaperflare" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/semiTransparentBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
    android:id="@+id/logoView"
    android:layout_width="142dp"
    android:layout_height="135dp"
    android:layout_marginTop="60dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/backgroundView"
    app:srcCompat="@drawable/logo" />

<TextView
    android:id="@+id/logoTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Driver Register"
    android:textSize="38sp"
    android:textColor="@color/white"
    app:layout_constraintTop_toBottomOf="@id/logoView"
    app:layout_constraintStart_toStartOf="@id/logoView"
    app:layout_constraintEnd_toEndOf="@id/logoView"
    app:layout_constraintHorizontal_bias="0.5" />

<View
    android:id="@+id/loginFrameView"
    android:layout_width="358dp"
    android:layout_height="240dp"
    android:layout_marginTop="96dp"
    android:background="@drawable/layout_login"
    app:layout_constraintEnd_toEndOf="@+id/backgroundView"
    app:layout_constraintHorizontal_bias="0.49"
    app:layout_constraintStart_toStartOf="@+id/backgroundView"
    app:layout_constraintTop_toBottomOf="@+id/logoView" />

<EditText
    android:id="@+id/driverAccountInput"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:autofillHints="username"
    android:background="@android:color/transparent"
    android:ems="9"
    android:hint="@string/username"
    android:inputType="text"
    android:textColor="@color/semiTransparentBlack"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="@+id/loginFrameView"
    app:layout_constraintHorizontal_bias="0.196"
    app:layout_constraintStart_toEndOf="@+id/iconAccountImage"
    app:layout_constraintTop_toBottomOf="@+id/dividerLine2" />

<ImageView
    android:id="@+id/iconEmailImage"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toBottomOf="@+id/dividerLine2"
    app:srcCompat="@drawable/account_icon" />

<View
    android:id="@+id/dividerLine2"
    android:layout_width="340dp"
    android:layout_height="1dp"
    android:layout_marginTop="80dp"
    android:background="@drawable/draw_line"
    app:layout_constraintEnd_toEndOf="@+id/loginFrameView"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toTopOf="@+id/loginFrameView" />

<ImageView
    android:id="@+id/iconAccountImage"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_marginStart="44dp"
    android:layout_marginTop="16dp"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toTopOf="@+id/loginFrameView"
    app:srcCompat="@drawable/email_icon" />

<EditText
    android:id="@+id/driverEmailInput"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:autofillHints="emailAddress"
    android:background="@android:color/transparent"
    android:ems="9"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    android:textColor="@color/semiTransparentBlack"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="@+id/loginFrameView"
    app:layout_constraintHorizontal_bias="0.196"
    app:layout_constraintStart_toEndOf="@+id/iconEmailImage"
    app:layout_constraintTop_toTopOf="@+id/loginFrameView" />

<View
    android:id="@+id/dividerLine"
    android:layout_width="340dp"
    android:layout_height="1dp"
    android:layout_marginTop="160dp"
    android:background="@drawable/draw_line"
    app:layout_constraintEnd_toEndOf="@+id/loginFrameView"
    app:layout_constraintHorizontal_bias="0.555"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toTopOf="@+id/loginFrameView" />


<EditText
    android:id="@+id/driverPasswordInput"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginTop="16dp"
    android:autofillHints="password"
    android:background="@android:color/transparent"
    android:ems="9"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/loginFrameView"
    app:layout_constraintEnd_toEndOf="@+id/loginFrameView"
    app:layout_constraintHorizontal_bias="0.689"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toBottomOf="@+id/dividerLine"
    app:layout_constraintVertical_bias="0.0" />

<ImageView
    android:id="@+id/iconPasswordImage"
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:layout_marginTop="16dp"
    app:layout_constraintEnd_toStartOf="@+id/driverPasswordInput"
    app:layout_constraintHorizontal_bias="0.8"
    app:layout_constraintStart_toStartOf="@+id/loginFrameView"
    app:layout_constraintTop_toBottomOf="@+id/dividerLine"
    app:srcCompat="@drawable/password_icon" />

<Button
    android:id="@+id/driverRegisterButton"
    android:layout_width="320dp"
    android:layout_height="56dp"
    android:layout_marginTop="24dp"
    android:text="@string/register"
    android:textSize="22sp"
    android:background="@drawable/layout_btn"
    android:foreground="@drawable/border_frame"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.496"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/loginFrameView" />



    <Button
        android:id="@+id/DriverSignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:text="@string/register_a_user_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driverRegisterButton" />

    <Button
        android:id="@+id/driverLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DriverSignupButton" />

</androidx.constraintlayout.widget.ConstraintLayout>